corrected alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,6 @@ body {
     height: 50px;
 }
 
+hr {
+    border-top: 2px solid rgba(0,0,0,.1);
+}
